# agentic-router

./: .env.example  README.md  pyproject.toml
agentic_router/: clients.py  embedding.py  refrence.py
agentic_router/agents/: __init__.py  difficulty_analyst.py  difficulty_evaluator.py  routing_decision_maker.py
agentic_router/core/: __init__.py  config.py  logging.py
agentic_router/database/: __init__.py  difficulty_analysis.py
agentic_router/models/: __init__.py  difficulty.py  routing.py
agentic_router/scripts/: __init__.py  generate_dataset.py  generate_difficulty_analysis.py
src/lm_arena_dataset/: generate_dataset.py
